--- a/Html/Document/style.css
+++ b/Html/Document/style.css
@@ -143,3 +143,25 @@ input:hover {
     background-color: rgba(220, 220, 220, 0.7);
 
 }
+
+#botoomBtns {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 30px auto 10px auto;
+
+}
+
+#botoomBtns button {
+    background-color: rgb(187, 191, 196);
+    border: 0;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+#botoomBtns button:hover {
+    cursor: pointer;
+    color: rgba(70, 141, 255, 1);
+    ;
+}
